Added Entities, DatabaseContext, generated database

--- a/Identity/BusinessLayer/BusinessLayer.csproj
+++ b/Identity/BusinessLayer/BusinessLayer.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
