--- a/Identity/PresentationLayer/appsettings.json
+++ b/Identity/PresentationLayer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=.\\SQLExpress;Initial Catalog=chat-identity-db;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
