--- a/Identity/PresentationLayer/appsettings.json
+++ b/Identity/PresentationLayer/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=.\\SQLExpress;Initial Catalog=chat-identity-db;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=mssql,1433;Initial Catalog=chat-identity-db;User ID=${DB_USERNAME};Password=${DB_PASSWORD};TrustServerCertificate=True",
+    "Local": "Server=.\\SQLEXPRESS;Initial Catalog=chat-identity-db;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
