--- a/Chat/WebApi/appsettings.json
+++ b/Chat/WebApi/appsettings.json
@@ -8,6 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMQ": {
+    "Host": "amqp://localhost",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "AuthenticationOptions": {
     "Issuer": "IdentiyServer",
     "Audience": "ChatUser",
