--- a/Identity/PresentationLayer/appsettings.json
+++ b/Identity/PresentationLayer/appsettings.json
@@ -13,5 +13,11 @@
     "Audience": "ChatUser",
     "Key": "10fba9e7-bca3-4838-b097-50ae0a66ced32d51ae24-5f12-4309-9770-12015ff2ca81a75e1280-e929-4f84-816a-337337419683"
   },
+  "RabbitMQ": {
+    "Host": "amqp://localhost",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
