--- a/Identity/PresentationLayer/PresentationLayer.csproj
+++ b/Identity/PresentationLayer/PresentationLayer.csproj
@@ -18,4 +18,6 @@
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
