Added appsettings for Docker

--- a/Chat/WebApi/appsettings.Docker.json
+++ b/Chat/WebApi/appsettings.Docker.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS;Initial Catalog=chat-identity-db;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=mssql,1433;Initial Catalog=chat-chat-db;User ID=sa;Password=Ev152015-;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
