--- a/Chat/WebApi/appsettings.Development.json
+++ b/Chat/WebApi/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLEXPRESS;Initial Catalog=chat-chat-db;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AuthenticationOptions": {
+    "Issuer": "IdentiyServer",
+    "Audience": "ChatUser",
+    "Key": "10fba9e7-bca3-4838-b097-50ae0a66ced32d51ae24-5f12-4309-9770-12015ff2ca81a75e1280-e929-4f84-816a-337337419683"
+  },
+  "AllowedHosts": "*"
 }
