Added docker-compose.override and changed docker-compose structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,25 @@
-version: "3.7"
+version: "3.9"
 
 services:
   chat:
     container_name: chat-service
     build:      
       context: ./Chat
-      dockerfile: "Dockerfile"    
-    depends_on:
-      - mssql    
-    ports:
-      - "5001:80"
+      dockerfile: "WebApi/Dockerfile"    
   
   group:
-   container_name: group-service
-   build:
-     context: ./Group
-     dockerfile: "Dockerfile"
-   depends_on:
-     - mssql
-   ports:
-     - "5002:80"
+    container_name: group-service
+    build:
+      context: ./Group
+      dockerfile: "WebApi/Dockerfile"
 
   identity:
    container_name: identity-service
    build:
      context: ./Identity
-     dockerfile: "Dockerfile"
-   depends_on:
-     - mssql
-   ports:
-     - "5003:80"
+     dockerfile: "PresentationLayer/Dockerfile"
+
 
   mssql:
     container_name: mssql
     image: mcr.microsoft.com/mssql/server:2022-latest
-    ports:
-      - 1433:1433
-    environment:
-      ACCEPT_EULA: Y
-      MSSQL_PID: Express
-      SA_PASSWORD: ${SA_PASSWORD}
-    volumes:
-      - mssql_data:/var/opt/mssql
-
-volumes:
-  mssql_data:
