--- a/Chat/WebApi/appsettings.json
+++ b/Chat/WebApi/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "IdentityConfig": {
+    "EndPoint": "http://localhost:5101/"
+  },
   "RabbitMQ": {
     "Host": "amqp://localhost",
     "VirtualHost": "/",
