--- a/Group/WebApi/appsettings.json
+++ b/Group/WebApi/appsettings.json
@@ -11,6 +11,9 @@
     "Username": "guest",
     "Password": "guest"
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379, abortConnect=false"
+  },
   "AuthenticationOptions": {
     "Issuer": "IdentiyServer",
     "Audience": "ChatUser",
