Added Redis Middleware, updated user dtos(added IsOnline property), added userOnlineResolver

--- a/Identity/PresentationLayer/appsettings.json
+++ b/Identity/PresentationLayer/appsettings.json
@@ -16,5 +16,8 @@
     "Username": "guest",
     "Password": "guest"
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379, abortConnect=false"
+  },
   "AllowedHosts": "*"
 }
