--- a/Chat/WebApi/appsettings.json
+++ b/Chat/WebApi/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
   },
   "RabbitMQ": {
@@ -15,6 +18,9 @@
     "Issuer": "IdentiyServer",
     "Audience": "ChatUser",
     "Key": "10fba9e7-bca3-4838-b097-50ae0a66ced32d51ae24-5f12-4309-9770-12015ff2ca81a75e1280-e929-4f84-816a-337337419683"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
