--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,46 @@ services:
      context: ./Identity
      dockerfile: "PresentationLayer/Dockerfile"
 
+  mongodb:
+    container_name: mongodb
+    image: mongo:latest
+    ports:
+      - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
 
   mssql:
     container_name: mssql
     image: mcr.microsoft.com/mssql/server:2022-latest
+
+  rabbitmq:
+    container_name: "rabbitmq"
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+
+
+  elasticsearch:
+    container_name: elasticsearch
+    image: elasticsearch:8.11.1
+    ports:
+      - 9200:9200
+    environment:
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+
+  kibana:
+    container_name: kibana
+    image: kibana:8.11.1
+    ports:
+      - 5601:5601
+    environment:
+      - ELASTICSEARCH_URL=http://localhost:9200
+    depends_on:
+      - elasticsearch
