Refactor Kestrel configuration, Namespaces, deleted empty lines

--- a/Identity/PresentationLayer/appsettings.json
+++ b/Identity/PresentationLayer/appsettings.json
@@ -16,5 +16,17 @@
     "Username": "guest",
     "Password": "guest"
   },
+    "Kestrel": {
+      "Endpoints": {
+        "GRPC_PORT": {
+          "Url": "http://localhost:5101",
+          "Protocols": "Http2"
+        },
+        "PORT": {
+          "Url": "http://localhost:5001",
+          "Protocols": "Http1AndHttp2"
+        }
+      }
+    },
   "AllowedHosts": "*"
 }
